--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,24 @@ body{
     font-family: 'Ubuntu' ,'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
+h1{
+    text-align: center;
+    font-size: 3em;
+}
+
+.intro{
+    text-align: center;
+    width: 1200px;
+    margin: 20px auto;
+    font-weight: 400;
+    font-size: 1.5rem;
+}
+
 button{
+    font-family: 'Ubuntu' ,'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 5px;
+    font-weight: 800;
+    font-size: 1.5rem;
 }
 
 .weapons{
@@ -36,6 +52,13 @@ button{
     text-align: center;
     margin: auto;
     width: 800px
+}
+
+#start{
+    height: 50px;
+    width: 200px;
+    margin:20px auto;
+    border-radius: 50px;    
 }
 
 button{
