--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ body{
     display: flex;
     flex-direction: column;
     color: white;
+    justify-content: center;
+    align-items: center;
     font-family: 'Ubuntu' ,'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
@@ -13,8 +15,8 @@ h1{
 
 .intro{
     text-align: center;
-    width: 1200px;
-    margin: 20px auto;
+    width: 1000px;
+    word-spacing: 2px;
     font-weight: 400;
     font-size: 1.5rem;
 }
@@ -57,8 +59,24 @@ button{
 
 .narration{
     text-align: center;
-    margin: auto;
-    width: 800px
+    width: 800px;
+}
+
+@media only screen and (max-width: 767px) {
+    body{
+        padding: 2px;
+    }
+    .narration{
+        text-align: center;
+        width: 400px;
+    }   
+    .intro{
+        text-align: center;
+        width: 400px;
+        word-spacing: 2px;
+        font-weight: 400;
+        font-size: 1.5rem;
+    }
 }
 
 #start{
