--- a/styles.css
+++ b/styles.css
@@ -127,3 +127,70 @@ button:hover{
     border-radius: 20px;
     padding: 20px;
 }
+
+.popup{
+    position: fixed;
+    transform: translate(0%, 0%) scale(0);
+    width: 400px;
+    max-width: 70%;
+    min-width: 200px;
+    transition: 200ms ease-in-out;
+    border: 1px solid white;
+    background-color: black;
+    color: white;
+    border-radius: 10px;
+    z-index: 10;
+}
+
+.popup-header{
+    padding: 5px 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 2px solid white;
+}
+
+.popup-header .title{
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
+.popup-header .close-button{
+    background: none;
+    border: none;
+    cursor: pointer;
+    appearance: none;
+    outline: none;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+}
+
+.popup-header .close-button:hover{
+    box-shadow: none;
+}
+
+.popup-body{
+    padding: 5px 10px;
+}
+
+#overlay{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    transition: 200ms ease-in-out;
+    opacity: 0%;
+    background-color: rgba(0,0,0, 0.8);
+    pointer-events: none;
+}
+
+#overlay.active{
+    opacity: 1;
+    pointer-events: all;
+}
+
+.popup.active{
+    transform: translate(0%, 0%) scale(1);
+}
